Certificate manager: DER/PKCS12 export, bundle import, CSR generation
Completes the cert-manager export/import polish (Phase 1.2), all
offline-testable:

- CertificateExporter: export a cert as DER, a concatenated PEM bundle,
  or a password-protected PKCS#12 keystore (key+chain, or a cert-only
  trust store).
- CertificateImporter: load PKCS#12 / JKS bundles, decoding every alias
  to its leaf cert, full chain, and private key; typeForFileName
  autodetects JKS vs PKCS12.
- CertificateGenerator.generateCsr: generate a key pair + PKCS#10 CSR
  (PEM) with SANs in a requested-extensions attribute.

7 round-trip tests (DER/PEM re-parse, PKCS12 key+chain reload,
wrong-password rejection, well-formed CSR). CertificateManagerView gets
Export... (PEM/DER/PKCS12 by extension), Import Bundle..., and
Generate CSR... actions. Docs synced.